# aws-mlops-github-actions

./: .releaserc.json  Dockerfile  README.md  package.json  pyproject.toml
.github/actions/: checkout-source-code.yml
.github/actions/build-and-test/: action.yml
.github/actions/build-docker-image/: action.yml
.github/actions/build-sagemaker-model/: action.yml
.github/actions/checkout-and-set-environment-variables/: action.yml
.github/actions/checkout-source-code/: action.yml
.github/actions/push-docker-image/: action.yml
.github/actions/retrieve-aws-secrets/: action.yml
.github/actions/retrieve-aws-secrets-and-parameters/: action.yml
.github/actions/semantic-release/: action.yml
.github/actions/setup-python-and-install-dependencies/: action.yml
.github/workflows/: ci.yml  develop.yml  main.yml  model-build-composite.yml  model-build.yml  pipeline-build.yml  python-poetry-composite.yml  python-poetry.yml
cloud/utils/: download_from_s3.py
code/ml_lifecycle/6_train_model_tune_evaluate/: train.py
scripts/: retrieve_aws_secrets.py  upload_to_s3.py
tests/: test_aws_scripts.py
