[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
botocore = "^1.23.0" # You can specify the version you need
boto3 = "^1.20.0"    # You can specify the version you need
awscliv2 = "^2.3.0"  # You can specify the version you need
moto = "^2.2.8"      # You can specify the version you need

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
